--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - echo $LANG
   - echo $LC_ALL
   - $CXX -v
+  - export PYTHONPATH=$PYTHONPATH:$(pwd)/install/lib/python/
 install:
   - pip install numpy 
   - pip install scipy
