rxd tests require matplotlib

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 install:
   - pip install numpy 
   - pip install scipy
+  - pip install matplotlib
 script:
   - ./travis_build.sh .
   - echo $PYTHONPATH
