modified:   .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ compiler:
 env:
   - CONFIG_OPTIONS="--without-x --without-paranrn --with-nrnpython=$(which python2)"
     PYTHON = $(which python2)
-  - CONFIG_OPTIONS="--without-x --without-paranrn --with-nrnpython=$(which python3)
+  - CONFIG_OPTIONS="--without-x --without-paranrn --with-nrnpython=$(which python3)"
     PYTHON = $(which python3)
 os:
   - linux
