--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ compiler:
   - gcc
 env:
   - CONFIG_OPTIONS="--without-x --without-paranrn --with-nrnpython=$(which python2)"
-    PYTHON = $(which python2)
+    PYTHON="$(which python2)"
   - CONFIG_OPTIONS="--without-x --without-paranrn --with-nrnpython=$(which python3)"
-    PYTHON = $(which python3)
+    PYTHON="$(which python3)"
 os:
   - linux
 before_install:
@@ -26,5 +26,6 @@ install:
 script:
   - ./travis_build.sh .
   - echo $PYTHONPATH
+  - echo $PYTHON
   - ls ./install/lib/python/
   - $PYTHON share/lib/python/neuron/rxdtests/run_all.py
