modified:   .travis.yml 	new file:   share/lib/python/neuron/rxdtests/correct_data/multicompartment_reactions.dat 	new file:   share/lib/python/neuron/rxdtests/tests/multicompartment_reactions.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,8 @@ dist: trusty
 addons:
     apt:
         packages:
-        - python3
-        - python3-setuptools
-        - python-numpy
-        - python3-numpy
-        - python-scipy
-        - python3-scipy
-        - python-matplotlib
-        - python3-matplotlib
+        - python3-pip
+        - python-pip
 virtualenv:
     system_site_packages: true 
 
@@ -32,6 +26,10 @@ before_install:
   - echo $LC_ALL
   - $CXX -v
   - export PYTHONPATH=$PYTHONPATH:$(pwd)/install/lib/python/
+install:
+  - $PIP install numpy 
+  - $PIP install scipy
+  - $PIP install matplotlib
 script:
   - ./travis_build.sh build_out_of_tree
   - ./travis_build.sh .
