--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+sudo: false
 dist: trusty
 addons:
     apt:
@@ -26,12 +27,10 @@ before_install:
   - $CXX -v
   - export PYTHONPATH=$PYTHONPATH:$(pwd)/install/lib/python/
 install:
-  - env
-  - sudo env
-  - sudo -E env
-  - sudo -E $PIP install numpy 
-  - sudo -E $PIP install scipy
-  - sudo -E $PIP install matplotlib
+  - $PIP install --user numpy 
+  - $PIP install --user scipy
+  - $PIP install --user matplotlib
+  - export PYTHONPATH=$PYTHONPATH:$HOME/.local/lib/python*/
 script:
   - ./travis_build.sh build_out_of_tree
   - ./travis_build.sh .
